// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`DataPair matches snapshot when priority is normal 1`] = `
.c0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  padding-right: 15%;
  margin: 8px;
  position: relative;
}

<div
  className="c0"
/>
`;

exports[`DataPair matches snapshot when priority is primary 1`] = `
.c0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  padding-right: 15%;
  margin: 8px;
  position: relative;
  overflow: hidden;
  font-weight: 600;
}

.c0:after {
  content: "";
  position: absolute;
  bottom: 0;
  left: 4em;
  right: 4em;
}

<div
  className="c0"
/>
`;
